#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libcxxw], [0.1], [mrsam@courier-mta.com])
AC_CONFIG_SRCDIR([helloworld.C])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([dist-bzip2 foreign -Wno-portability])

# Checks for programs.
AC_PROG_CXX
LIBCXX_INIT
LIBCXXW_INIT
AC_CONFIG_FILES([Makefile
	])

AC_OUTPUT
